Change name to Canvas

--- a/lib/tasks/lms_api/graphql_mutations.erb
+++ b/lib/tasks/lms_api/graphql_mutations.erb
@@ -1,5 +1,5 @@
 const Mutuation = new GraphQLObjectType({
-  name: 'Lms Api Mutations',
+  name: 'Canvas Api Mutations',
   fields: {
     <%=@content.join("\n\n")%>
   }
