--- a/lib/tasks/lms_api/graphql_queries.erb
+++ b/lib/tasks/lms_api/graphql_queries.erb
@@ -1,6 +1,6 @@
 const Query = new GraphQLObjectType({
-  name: 'Lms Api Queries',
-  description: "Root of the Lms Api",
+  name: 'Canvas Api Queries',
+  description: "Root of the Canvas Api",
   fields: () => ({
     <%=@content.join("\n\n")%>
   })
