--- a/lib/canvas_api/templates/rb_graphql_mutation_include.erb
+++ b/lib/canvas_api/templates/rb_graphql_mutation_include.erb
@@ -1,1 +1,1 @@
-field :<%= @nickname %>, mutation: LMS::GraphQL::Mutations::Canvas::<%= @nickname.classify %>
+field :<%= @nickname %>, mutation: LMSGraphQL::Mutations::Canvas::<%= @nickname.classify %>
