--- a/lib/canvas_api/templates/rb_graphql_mutations.erb
+++ b/lib/canvas_api/templates/rb_graphql_mutations.erb
@@ -1,16 +1,14 @@
-require "lms/utils"
-require "lms/graphql/mutations/canvas_base_mutation"
+require_relative "../../utils"
+require_relative "../canvas_base_mutation"
 require_all(File.absolute_path(__FILE__), "../../mutations/canvas/")
 
-module LMS
-  module GraphQL
-    module Mutations
-      module Canvas
-        class MutationType < CanvasBaseMutation
-          description "Canvas API mutations"
+module LMSGraphQL
+  module Mutations
+    module Canvas
+      class MutationType < CanvasBaseMutation
+        description "Canvas API mutations"
 
-          <%= @content.join("\n          ") %>
-        end
+        <%= @content.join("\n        ") %>
       end
     end
   end
