--- a/lib/canvas_api/templates/rb_graphql_field.erb
+++ b/lib/canvas_api/templates/rb_graphql_field.erb
@@ -1,3 +1,3 @@
-          field :<%= @nickname %>,
-            resolver: LMS::GraphQL::Resolvers::Canvas::<%= @nickname.classify %>,
-            description: "<%= @summary %>. <%= @notes.gsub(/\n+/, " ").gsub("//", " ").gsub('"', "'") %>"
+        field :<%= @nickname %>,
+          resolver: LMSGraphQL::Resolvers::Canvas::<%= @nickname.classify %>,
+          description: "<%= @summary %>. <%= @notes.gsub(/\n+/, " ").gsub("//", " ").gsub('"', "'") %>"
