--- a/lib/canvas_api/templates/constant.erb
+++ b/lib/canvas_api/templates/constant.erb
@@ -1,4 +1,4 @@
-<% parameters_doc = parameters_doc(operation) -%>
+<% parameters_doc = parameters_doc(operation, @method.downcase) -%>
 // <%=@summary%>
 // <%=@notes%>
 //
@@ -6,5 +6,5 @@
 // API Url: <%=@api_url%>
 //
 // Example:<%=parameters_doc%>
-// return canvasRequest(<%=@nickname%>, {<%=@args.join(', ')%>}<%= parameters_doc.present? ? ", query" : ""%>);
+// return canvasRequest(<%=@nickname%>, {<%=@args.present? ? @args.join(', ') : ""%><%= @method.downcase == "get" && parameters_doc.present? ? ", ...query" : ""%>}<%= @method.downcase != "get" && parameters_doc.present? ? ", body" : ""%>);
 export const <%=@nickname.camelcase(:lower)%> = { type: '<%=@nickname.upcase%>', method: '<%=@method.downcase%>', key: '<%=reducer_key(@nickname, @args)%>', required: <%=js_args(@args)%> };
