Fix input types. Add auto generated forward declarations

--- a/lib/canvas_api/templates/rb_graphql_input_type.erb
+++ b/lib/canvas_api/templates/rb_graphql_input_type.erb
@@ -7,7 +7,7 @@ module LMSGraphQL
 <%=graphql_field_enums(@model)-%>
       class Canvas<%=@model['id'].singularize%>Input < BaseInputObject
         description "<%=@description%>. API Docs: https://canvas.instructure.com/doc/api/<%=@name%>.html"
-      <%=graphql_fields(@model, @resource_name, true).join("      ")%>
+      <%=graphql_fields(@model, @resource_name, true, true).join("      ")%>
       end
     end
   end
