--- a/lib/canvas_api/templates/go_struct.erb
+++ b/lib/canvas_api/templates/go_struct.erb
@@ -9,7 +9,7 @@ import (
 	<% if time_required -%>
   "time"
 	<% end -%>
-	<% if field_validations && field_validations.length > 0 -%>
+	<% if (field_validations && field_validations.length > 0) -%>
 	"fmt"
 
   "github.com/atomicjolt/string_utils"
