--- a/lib/canvas_api/templates/go_struct.erb
+++ b/lib/canvas_api/templates/go_struct.erb
@@ -21,14 +21,23 @@ type <%=struct_name(@model['id'])%> struct {
 	<%=fields&.join("\n  ")%>
 }
 
-func (t *<%=struct_name(@model['id'])%>) HasError() error {
+func (t *<%=struct_name(@model['id'])%>) HasErrors() error {
 	<% if field_validations && field_validations.length > 0 -%>
 		var s []string
-		<%field_validations.each do |name, values|-%>
-			s = []string{<%=values.join(",")%>}
-			if t.<%=go_name(name)%> != "" && !string_utils.Include(s, t.<%=go_name(name)%>) {
-				return fmt.Errorf("expected '<%=name%>' to be one of %v", s)
-			}
+		errs := []string{}
+		<%field_validations.each do |name, prop|-%>
+			s = []string{<%=prop[:values].join(",")%>}
+			<% if prop[:type] == "array" %>
+				for _, v := range t.<%=go_name(name)%> {
+          if v != "" && !string_utils.Include(s, v) {
+						errs = append(errs, fmt.Sprintf("expected '<%=go_name(name)%>' to be one of %v", s))
+          }
+        }
+			<% else -%>
+				if t.<%=go_name(name)%> != "" && !string_utils.Include(s, t.<%=go_name(name)%>) {
+					errs = append(errs, fmt.Sprintf("expected '<%=go_name(name)%>' to be one of %v", s))
+				}
+			<% end -%>
 		<% end -%>
 	<% end -%>
 	return nil
