--- a/lib/canvas_api/templates/ts_url.erb
+++ b/lib/canvas_api/templates/ts_url.erb
@@ -1,29 +1,13 @@
 <%= ts_type_creator(@nickname, @parameters) %>
-<% if @parameters.present? || ["POST", "PUT"].include?(@method) %>
-interface <%=@nickname.camelize%>InputType {
-  <% if ["POST", "PUT"].include?(@method) %>
-    body: Record<string, unknown>;
-  <% end %>
-  <% if @parameters.present? %>
-  params: <%=@nickname.camelize%>InputParamsType;
-  <% end %>
-}
-<% end %>
 export class <%=@nickname.camelize%>Action implements CanvasApiAction {
 <% if @parameters.present? %>
-  public readonly params: <%=@nickname.camelize%>InputParamsType;
-<% end %>
-<% if ["POST", "PUT"].include?(@method) %>
-  public readonly body: Record<string, unknown>;
+  public readonly params: <%=@nickname.camelize%>InputType;
 <% end %>
 
-<% if @parameters.present? || ["POST", "PUT"].include?(@method) %>
+<% if @parameters.present? %>
   constructor(<%=@nickname.camelize%>Input: <%=@nickname.camelize%>InputType) {
   <% if @parameters.present? %>
-    this.params = <%=@nickname.camelize%>Input.params;
-  <% end %>
-  <% if ["POST", "PUT"].include?(@method) %>
-    this.body = <%=@nickname.camelize%>Input.body;
+    this.params = <%=@nickname.camelize%>Input;
   <% end %>
   }
 <% end %>
