--- a/lib/canvas_api/templates/rb_graphql_field.erb
+++ b/lib/canvas_api/templates/rb_graphql_field.erb
@@ -1,3 +1,3 @@
         field :<%= @nickname %>,
-          resolver: LMSGraphQL::Resolvers::Canvas::<%= @nickname.classify %>,
+          resolver: LMSGraphQL::Resolvers::Canvas::<%= graphql_resolver_class(@nickname) %>,
           description: "<%= @summary %>. <%= @notes.gsub(/\n+/, " ").gsub("//", " ").gsub('"', "'") %>"
